src/components/InputRange/InputRange.scss
input[type="range"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100px;
  background-color: transparent;

  &
  :focus {
    outline-color: #f8b195;
  }

}

input[type="range"]::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  appearance: none;
  height: 2px;
  background: rgb(255, 255, 255);
}

input[type="range"]::-moz-range-track {
  -moz-appearance: none;
  appearance: none;
  height: 3px;
  background: rgb(246, 114, 128);
}

input[type="range"]::-ms-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 3px;
  background: rgb(246, 114, 128);

}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #f8b195;
  border-radius: 50%;
  height: 15px;
  width: 15px;
  position: relative;
  bottom: 5px;
  background: #222 url("http://codemenatalie.com/wp-content/uploads/2019/09/slider-thumb.png") center no-repeat;
  background-size: 50%;
  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.4);
  cursor: grab;

  &
  :active {
    cursor: grabbing;
  }

}


input[type="range"]::-moz-range-thumb {
  -moz-appearance: none;
  appearance: none;
  border: 2px solid #f8b195;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  position: relative;
  bottom: 8px;
  background: #222 url("http://codemenatalie.com/wp-content/uploads/2019/09/slider-thumb.png") center no-repeat;
  background-size: 50%;
  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.4);
  cursor: grab;

  &
  :active {
    cursor: grabbing;
  }

}

input[type="range"]::-ms-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid #f8b195;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  position: relative;
  bottom: 8px;
  background: #222 url("http://codemenatalie.com/wp-content/uploads/2019/09/slider-thumb.png") center no-repeat;
  background-size: 50%;
  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.4);
  cursor: grab;

  & :active {
    cursor: grabbing;
  }

}

.inputWrapper {
  position: absolute;
  text-align: center;
  height: 36px;
  width: 124px;
  bottom: -195px;
  left: 71px;
  border-radius: 2px;

  background: rgba(23, 23, 23, 0.5);
}

